# raysurfer-existing-benchmarks-eval

./: .gitignore  .gitleaks.toml  README.md  pyproject.toml
runs/: baseline.json  baseline_template.json  run_log_template.json  summary.json  with_raysurfer.json
scripts/: build_tasks.py  common.py  generate_chart.py  run_benchmark_eval.py  run_rotating_sdk_eval.py  score_eval.py  seed_reference_solutions.py
